Updating states to an object to simplify a lot of the code, fixed issue with state overrides getting stuck

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,21 +2,21 @@
     padding: 0px 30px;
 }
 
-.connected {
+.green {
     font-weight: bold;
     color: #ffffff;
     background-color: rgba(0,255,0,0.7);
     padding: 0px 5px;
 }
 
-.unprotected {
+.red {
     font-weight: bold;
     color: #ffffff;
     background-color: rgba(255,0,0,0.7);
     padding: 0px 5px;
 }
 
-.connecting {
+.amber {
     font-weight: bold;
     color: #ffffff;
     background-color: rgba(255,191,0,0.7);
